kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-devops-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: eks-devops-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: REPLACE_WITH_ACM_CERTIFICATE_ARN
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: eks-devops.example.com
spec:
  ingressClassName: my-aws-ingress-class
  defaultBackend:
    service:
      name: eks-devops-nodeport-service
      port:
        number: 80
